Fix photo bug on Safari, use flex instead of height.

--- a/sulo-style/scss/content-item.scss
+++ b/sulo-style/scss/content-item.scss
@@ -39,10 +39,4 @@
 		display: flex;
 		flex-direction: column;
 	}
-
-	.full {
-		.overlay-container, .photo-container {
-			height: 100%;
-		}
-	}
 }
